@@ -1,3 +1,4 @@
    verilog/v_hier_top.v
     verilog/v_hier_sub.v
+    verilog/v_recursive.v
      verilog/v_hier_subsub.v
